tests/data/bad/bad_inherit_changes.py
from __future__ import annotations

from tests.data.bad.bad_inherit import schema

cfg = schema.init_cfg()
